--- a/laco_repeticao/estilo.css
+++ b/laco_repeticao/estilo.css
@@ -10,32 +10,31 @@
   
 
 #main-container {
-    width: 350px;
+    width: 400px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #FFF;
+    background-color: rgb(240, 240, 102);
     border-radius: 10px;
     padding: 25px;
 
   }
-  #main-container h1 {
+#main-container h1 {
     text-align: center;
     margin-bottom: 25px;
     font-size: 1.6rem;
   }
 
-  
-  body {
+body {
     padding-top: 5vh;
     background-color: rgb(233, 148, 115);
     background-size: cover;
     background-position-y: -150px;
   }
-
-  .btn {
+.btn {
     width: 100px;
     height: 100px;
     margin: 5px;
-    box-shadow: 1px 1px 1px #000;
+    margin-left: 40px;
+    box-shadow: 2px 2px 2px 2px rgb(14, 158, 33);
   }
   
